--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ nav{
     width: 100%;
     border-top-left-radius: 50%;
     border-bottom-left-radius: 50%;
-    /* filter: blur(10px); */
+    filter: blur(10px);
     position: absolute;
 }
 
@@ -138,7 +138,7 @@ nav{
     animation-timing-function: linear;
     animation-iteration-count: infinite;
     animation-direction: alternate;
-    /* filter: blur(25px); */
+    filter: blur(25px);
 }
 
 #hero-3 {
@@ -172,5 +172,58 @@ nav{
 
     to {
         transform: translate(-20%, 30%);
+    }
+}
+
+#page2 {
+    min-height: 100vh;
+    width: 100%;
+    background-color: #EFEAE3;
+    padding: 8vw 0;
+    position: relative;
+}
+
+#moving-text{
+    white-space: nowrap;
+    overflow-x: auto;
+}
+
+#moving-text::-webkit-scrollbar{
+    display: none;
+}
+
+
+.con{
+    white-space: nowrap;
+    display: inline-block;
+    animation-name: move;
+    animation-duration: 10 s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+}
+
+
+#moving-text h1{
+    font-size: 9vw;
+    /* background-color: lightblue; */
+    display: inline-block;
+}
+
+#gola{
+    height: 70px;
+    width: 70px;
+    background-color: #FE320A;
+    display: inline-block;
+    border-radius: 50%;
+    margin: 1vw 2vw;
+}
+
+@keyframes move {
+    from{
+        transform: translateX(0);
+    }
+    
+    to{
+        transform: translateX(-100%);
     }
 }
