--- a/style.css
+++ b/style.css
@@ -2,6 +2,19 @@
     font-family: neu;
     src: url(/NeueHaasDisplayMediu.ttf);
 }
+
+@font-face {
+    font-family: neu;
+    font-weight: 100;
+    src: url(/NeueHaasDisplayLight.ttf);
+}
+
+@font-face {
+    font-family: neu;
+    font-weight: 200;
+    src: url(/NeueHaasDisplayRoman.ttf);
+}
+
 *{
    margin: 0;
    padding: 0;
@@ -197,7 +210,7 @@ nav{
     white-space: nowrap;
     display: inline-block;
     animation-name: move;
-    animation-duration: 10 s;
+    animation-duration: 10s;
     animation-timing-function: linear;
     animation-iteration-count: infinite;
 }
@@ -226,4 +239,70 @@ nav{
     to{
         transform: translateX(-100%);
     }
+}
+
+#page2-bottom{
+    height: 80vh;
+    width: 100%;
+    /* background-color: aliceblue; */
+    padding: 4.5vw;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: relative;
+    z-index: 9;
+}
+
+#page2-bottom h1{
+    font-size: 4vw;
+    width: 60%;
+    line-height: 4vw;
+}
+
+#bottom-part2{
+    width: 20%;
+
+}
+
+#bottom-part2 img{
+    width: 100%;
+    border-radius: 10px;
+}
+
+#bottom-part2 p{
+    font-weight: 200;
+}
+
+#page2 #gooey{
+    height: 32vw;
+    width: 32vw;
+    background: linear-gradient(to top right,#Ff2d03, #ff5c0b);
+    top: 58%;
+    left : 25%;
+    border-radius: 50%;
+    position: absolute;
+    filter: blur(20px);
+    animation-name: gooey;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    animation-timing-function: ease-in-out;
+}
+
+@keyframes gooey {
+    from {
+        filter : blur(20px);
+        transform: translate(10%, -10%) skew(0);
+    }
+    to {
+        filter : blur(30px);
+        transform: translate(-10%, 10%)skew(-12deg);
+    }
+    
+}
+
+#page3{
+    height: 100vh;
+    width: 100%;    
+    background-color: #EFEAE3;
 }
