--- a/style.css
+++ b/style.css
@@ -302,7 +302,53 @@ nav{
 }
 
 #page3{
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;    
     background-color: #EFEAE3;
+    padding: 4vw 0;
+}
+
+.elem{
+    height: 150px;
+    width: 100%;
+    position: relative;
+    border-bottom: 1px solid #38383864;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    padding: 0 2vw;
+}
+
+.elem h2{
+    font-size: 3vw;
+    position: relative;
+    z-index: 9;
+}
+
+.elem .overlay{
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background-color: orange;
+    top: -100%;
+    left: 0;
+    transition: all ease 0.25s;
+}
+
+.elem:hover .overlay{
+    top: 0;
+}
+
+#fixed-image{
+    height: 30vw;
+    width: 25vw;
+    border-radius: 15px;
+    position: fixed;
+    z-index: 99;
+    left: 50%;
+    top: 25%;
+    background-color: red;
+    display: none;
+    /* background-size: cover;
+    background-position: center; */
 }
